# Kingdom-System

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  MODULE.bazel  Makefile  README.md  VERSION  WORKSPACE  asset-manifest.json  configuration.json  docker-compose.yml  index.html  installer.py  rust_toolchain.bzl  shell.nix
.github/: FUNDING.yml  autorelease  dependabot.yml
.github/workflows/: autorelease.yml  codacy.yml  contributors.yml  main.yml  rust.yml  version.yml
Developer Scripts/: Makefile  change-version.py
Libraries/Cryptograf/: BUILD
Libraries/Cryptograf/includes/: cryptograf.h
Libraries/Cryptograf/src/: cryptograf.c
Libraries/Cryptografher/: Cryptografher.cc  Cryptografher.hh
PluginManager/src/: kittens.txt  ks_manager
Plugins/Alice-Database/: .BUILD.bazel.kate-swp  .Cargo.toml.kate-swp  BUILD  BUILD.bazel  Cargo.toml  README.md  WORKSPACE.bazel  build.rs
Plugins/Alice-Database/proto/: database.proto  instance.proto
Plugins/Alice-Database/src/: cli.rs  command_executor.rs  engines.rs  grpc.rs  grpc_server.rs  instance.rs  json_engine.rs  lib.rs  log_engine.rs  main.rs  prelude.rs  test.decl  tests.rs  universal_engine.rs  utils.rs
Plugins/Alice-Database/src/ADB_Data/json_engine/collection1/: document1.json
Plugins/Alice-Database/src/syntax/: instance_manager.pest
Plugins/Alice-Database_v2/: .all.rs.kate-swp  BUILD  CMakeLists.txt  Cargo.toml  Makefile  README.md  WORKSPACE.bazel  all.rs  grammar.pest
Plugins/Alice-Database_v2/.cargo/: config.toml
Plugins/Alice-Database_v2/data/rooms/: 81b4267c-9ec5-4d61-942c-a9b37b32e85f.json
Plugins/Alice-Database_v2/src/: config.toml  data.json  instance_manager.rs  lib.rs  main.bk.rs  main.rs
Plugins/Alice-Database_v2/src/ADB_Data/json_engine/instance_1/: users.json
Plugins/Alice-Database_v2/src/engines/: json_engine.rs  log_engine.rs  mod.rs
Plugins/AliceDatabase/: BUILD  Cargo.toml  Makefile  README.md  build.rs  config.json
Plugins/AliceDatabase/proto/: queue.proto
Plugins/AliceDatabase/src/: adbcore.rs  atypes.rs  configurator.rs  executor.rs  lib.rs  main.rs  sql.pest  tests.rs
Plugins/AliceDatabase/src/adbcore/: adbp_engine_interface.rs  executor.rs  fs_manager.rs  mod.rs  pickling.rs  types.rs
Plugins/AliceDatabase/src/default_db/: mod.rs
Plugins/AliceDatabase/src/engines/: mod.rs
Plugins/AliceDatabase/src/engines/default_adbp/: mod.rs
Plugins/AliceDatabase/src/fs_manager/: mod.rs
Plugins/AliceDatabase/src/log_db/: mod.rs
Plugins/AliceDatabase/src/queue_db/: mod.rs
Plugins/AliceDatabase/src/remore_db/: mod.rs
Plugins/Box-storage/: pyproject.toml
Plugins/Box-storage/src/: api.py  bucket.py  bucket_controller.py
Plugins/MemoreDB/: Dockerfile  README.md  mix.exs
api/: Cargo.toml
api/src/: routers.rs
api/src/amre/: mod.rs
bridges/client_examples/telegram/: pyproject.toml
bridges/client_examples/telegram/src/: dispatcher.py  main.py
bridges/client_examples/telegram/src/frontend/: handlers.py
bridges/client_examples/telegram/src/middleware/: api_usage.py
client_examples/telegram/: pyproject.toml
client_examples/telegram/src/: dispatcher.py
client_examples/telegram/src/core/: config.py
configuration-files/: nginx_load_balancer.conf  prometheus.yml
docs/org-files/: todo.org
modules/api/: Cargo.toml  Dockerfile  Makefile  test.json
modules/api/src/: config.rs  main.rs  models.rs  router_creator.rs
modules/api/src/amre/: amrq_publisher.rs  redis_receiver.rs
modules/api/src/endpoints/: auth.rs  authenticate.rs  debug.rs  debug_endp.rs  groups.rs  lessons.rs  mod.rs  operator.rs  public.rs  schedules.rs  students.rs  teachers.rs
modules/api/src/handlers/: mod.rs  teachers.rs
modules/api/src/middleware/: amqp_sender.rs  mod.rs  redis_getter.rs
modules/api/src/middlewares/: controller.rs  mod.rs  mongo_crud.rs  mongo_group_controller.rs  mongo_lesson_controller.rs  mongo_schedule_controller.rs  mongo_user_controller.rs  router_creator.rs
modules/api/src/models/: abstract_models.rs  another_models.rs  database_models.rs  group_models.rs  lesson_models.rs  mod.rs  request_payloads.rs  response_payloads.rs  schedule_models.rs  token_models.rs  user_models.rs
modules/api/src/repos/: auth.rs  mod.rs  operator.rs  public.rs
modules/box/: .gitignore  README.md  mix.exs
modules/crud/: Makefile  package-lock.json  package.json  pyproject.toml
modules/crud/src/: amqp_controller.py  amqp_receiver.py  amqp_test.py  config.py  crud.py  logger.py  mongo_controller.py  redis_controller.py
modules/crud/src/Controllers/: amqp_controller.py  documentsController.py  mongoController.py  postgresController.py  redis_controller.py
modules/crud/src/utils/: amqp_test.py
modules/news/: README.md
modules/tests/test_mongo_morph/: Cargo.toml  bk.rs
modules/tests/test_mongo_morph/src/: main.rs  mind_map.md
plugins/AliceDatabase/: Cargo.toml
plugins/AliceDatabase/src/: build.rs  main.rs
plugins/AliceDatabase/src/proto/: alice_database.proto
plugins/Auther/: Cargo.toml  develop_shell.nix
plugins/Auther/src/: main.rs
plugins/Authorization/: BUILD
plugins/Kingdom-Scheduler/: docker-compose.yml  pyproject.toml
plugins/Kingdom-Scheduler/src/: main.py  test.py
plugins/Kingdom-Scheduler/src/api_v1/: auth_router.py  groups_router.py  schedule_router.py  users_router.py
plugins/Kingdom-Scheduler/src/core/: __init__.py  db.py  middleware.py  types.py
plugins/Kingdom-Scheduler/src/dataspace/: dataspace.py
plugins/Kingdom-Scheduler/src/models/: database_models.py  rr_models.py
plugins/box/: .gitignore  pyproject.toml
plugins/box/src/: Makefile  crud.py  main.py
plugins/cloud/: README.md  pyproject.toml
plugins/datalyzer/: Cargo.toml
plugins/scheduler/: .gitignore  README.md  docker-compose.yml  mix.exs
plugins/scheduler_web_app/: develop.nix
site/: package-lock.json  package.json
site/src/: HomePage.tsx  index.tsx
static/css/: main.b371f8e6.css  main.b371f8e6.css.map
static/js/: main.1d1d1883.js  main.1d1d1883.js.map
web/: README.md
web-ui/schedule-ui/: README.md  package-lock.json  package.json
(+576 files in other folders)
