[package]
name = "Alice-Database"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
block-modes = "0.9.1"
csv = "1.3.0"
hex = "0.4.3"
log = "0.4.22"
prost = "0.13.3"
serde = { version = "1.0.210", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.128"
simplelog = "0.12.2"
tempfile = "3.13.0"
termion = "4.0.3"
tokio = { version = "1.40.0", features = ["full"] }
tonic = "0.12.3"
uuid = { version = "1.10.0", features = ["serde", "v4"] }

[build-dependencies]
tonic-build = "0.12.3"
