[package]
name = "Alice-Database_DBMS"
version = "1.0.0"
edition = "2021"
include = ["**/*.rs", "Cargo.toml"]
license = "MIT"
description = "The Alice-Database is a comprehensive data management solution designed to integrate seamlessly with the Kingdom System. This plugin provides robust functionality for creating, updating, and deleting collections and documents, ensuring efficient and reliable data storage and retrieva"
repository = "https://github.com/0xBLCKLPTN/Kingdom-System/tree/main/Plugins/Alice-Database"
keywords = ["DBMS", "grpc", "tokio", "async"]
homepage = "https://github.com/0xBLCKLPTN/Kingdom-System"

[dependencies]
chrono = "0.4.38"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
simplelog = "0.12.2"

[[test]]
name = "tests"
path = "src/main.rs"
