[package]
name = "Alice-Database_v2"
version = "0.1.0"
edition = "2021"

[features]
default = ["log_engine"]
log_engine = []
#json_engine = []

[dependencies]
aes = "0.8.4"
block-modes = "0.9.1"
chrono = "0.4.38"
colored = "2.1.0"
config = "0.14.0"
crossterm = "0.28.1"
csv = "1.3.0"
env_logger = "0.11.5"
hex = "0.4.3"
log = "0.4.22"
pest = "2.7.13"
pest_derive = "2.7.13"
prost = "0.13.3"
serde = { version = "1.0.210", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.128"
simplelog = "0.12.2"
tempfile = "3.13.0"
tokio = { version = "1.40.0", features = ["full"] }
tonic = "0.12.3"
uuid = { version = "1.10.0", features = ["serde", "v4"] }

[build-dependencies]
tonic-build = "0.12.3"

[dependencies.tui]
version = "0.16"
default-features = false
features = ["crossterm"]

[lib]
crate-type = ["cdylib"]
