[package]
name = "AliceDatabase"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
lazy_static = "1.5.0"
pest = "2.7.13"
pest_derive = "2.7.13"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
termion = "4.0.2"
tokio = {version= "1.40.0", features=["full"]}
tonic = "0.12.3"
tonic-build = "0.12.3"
