[tool.poetry]
name = "telegram"
version = "0.1.0"
description = ""
authors = ["Daniil Ermolaev <blcklptn@icloud.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
pydantic = "^1.10.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
