[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
jsonwebtoken = "8.3.0"
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
redis = {version="0.23.0", features =["r2d2", "json"]}
salvo = {version ="0.41.0", features = ["affix","anyhow", "jwt-auth"]}
serde = "1.0.162"
serde_json = "1.0.96"
time = "0.3.21"
tokio = { version = "1.28.1", features = ["macros"] }
tracing-subscriber = "0.3.17"

