[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
salvo = { version = "0.41.0", features = [ "affix", "anyhow", "jwt-auth" ] }
jsonwebtoken = "8.3.0"
serde = "1.0.163"
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["macros"] }
tracing-subscriber = "0.3.17"
time = "0.3.21"
mongodb = { version ="2.5.0", features = ["tokio-runtime"] } 
r2d2 = "0.8.10"

