[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
jsonwebtoken = "8.3.0"
serde = "1.0.163"
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["macros"] }
tracing-subscriber = "0.3.17"
time = "0.3.21"
mongodb = { version ="2.5.0", features = ["tokio-runtime"] } 
r2d2 = "0.8.10"
bson = "2.6.1"
futures = "0.3.28"
actix-web = "4.3.1"
structopt = "0.3.26"
structopt-derive = "0.4.18"
env_logger = "0.10.0"
actix-http = "3.3.1"
lazy_static = "1.4.0"

