[tool.poetry]
name = "kingdomsystem-crud"
version = "0.1.0"
description = ""
authors = ["blcklptn"]
readme = "README.md"
packages = [{include = "kingdomsystem_crud"}]

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.2"
redis = "^4.5.5"
pydantic = "^1.10.7"
logstash = "^0.1.dev0"
pymongo = "^4.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
