[package]
name = "AliceDatabase"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.19.0"
prost = "0.13.3"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["full"] }
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
