[tool.poetry]
name = "box"
version = "0.1.0"
description = ""
authors = ["Daniil Ermolaev <blcklptn@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.22.0"
pydantic = "^1.10.8"
fastapi = "^0.96.0"
pymongo = "^4.3.3"
gunicorn = "^20.1.0"
python-multipart = "^0.0.6"
pathlib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
