[package]
name = "test_mongo_morph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bson = "2.6.1"
futures = "0.3.28"
serde = "1.0.163"
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["macros"] }
mongodb = { version = "2.5.0", features = ["tokio-runtime"]}
async-trait = "0.1.68"
